# LLM-Validation-Risk-Assessment-Framework-

./: .gitattributes  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
agents/: swarm.yaml
docs/: methodology.md
src/llm_validation_platform/: __init__.py  cli.py  config.py  logging_config.py  sample_data.py  schemas.py
src/llm_validation_platform/dashboards/: app.py
src/llm_validation_platform/evaluations/: __init__.py  base.py  bias.py  factory.py  faithfulness.py  performance.py  robustness.py  safety.py
src/llm_validation_platform/evaluations/llm_judges/: __init__.py  ragas_faithfulness.py
src/llm_validation_platform/governance/: __init__.py  model_card.py
src/llm_validation_platform/orchestration/: __init__.py  pipeline.py  swarm_cli.py  swarm_runner.py
src/llm_validation_platform/reporting/: __init__.py  report_builder.py
src/llm_validation_platform/reporting/templates/: validation_report.md.j2
src/llm_validation_platform/risk_scoring/: __init__.py  engine.py  framework.py
tests/: test_evaluators.py  test_llm_judge_factory.py  test_pipeline_and_report.py  test_risk_engine.py  test_swarm_runner.py
